--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h1>Maloy Baroi</h1>
                     <h2>I'm a
                         <span class="txt-rotate" data-period="2000"
-                              data-rotate='[ "Web Designer.", "Web Developer.", "Photographer.", "Blogger", "Web Scrapper" ]'>
+                              data-rotate='[ "Web Designer.", "Web Developer.", "Photographer.", "Blogger.", "Web Scrapper." ]'>
 						</span>
                     </h2>
                 </div>
