Fiverr account added

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                 <h2>I'm <span>Available</span> for freelancing</h2>
                 <p>A small river can bear a big fish. But some people can't understand. <br>Don't Judge a book By its
                     cover.</p>
-                <p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+                <p class="mb-0"><a href="https://www.fiverr.com/maloy_baroi?up_rollout=true" class="btn btn-primary py-3 px-5">Hire me</a></p>
             </div>
         </div>
     </div>
